fix check_sig